fix nav visibility

--- a/css/generals.css
+++ b/css/generals.css
@@ -29,3 +29,4 @@
 .text-center{ text-align: center; }
 .text-uppercase { text-transform: uppercase; }
 .w-100{width: 100%;}
+.hidden {visibility: hidden;}
